--- a/package.json
+++ b/package.json
@@ -1,41 +1,42 @@
 {
-    "name": "base-extend-backbone",
-    "version": "0.0.1",
-    "description": "基于backbone的扩展",
-    "main": "./src/index.js",
-    "directories": {
-        "example": "examples",
-        "test": "test"
-    },
-    "scripts": {
-        "test": "mocha --compilers js:babel-core/register --colors -w ./test/**/*.test.js",
-        "start": "browser-sync start --server --files examples/**/*.*",
-        "dev": "webpack --watch --colors --config webpack.dev.config.js"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/sapling-team/base-extend-backbone.git"
-    },
-    "keywords": [
-        "extend",
-        "backbone"
-    ],
-    "author": "icepy",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/sapling-team/base-extend-backbone/issues"
-    },
-    "homepage": "https://github.com/sapling-team/base-extend-backbone#readme",
-    "devDependencies": {
-        "babel-core": "^6.7.4",
-        "babel-loader": "^6.2.4",
-        "babel-preset-es2015": "^6.6.0",
-        "babel-register": "^6.7.2",
-        "browser-sync": "^2.11.2",
-        "chai": "^3.5.0",
-        "eslint": "^2.5.1",
-        "eslint-loader": "^1.3.0",
-        "extract-text-webpack-plugin": "^1.0.1",
-        "webpack": "^1.12.14"
-    }
+  "name": "base-extend-backbone",
+  "version": "0.0.1",
+  "description": "基于backbone的扩展",
+  "main": "./src/index.js",
+  "directories": {
+    "example": "examples",
+    "test": "test"
+  },
+  "scripts": {
+    "test": "mocha --compilers js:babel-core/register --colors -w ./test/**/*.test.js",
+    "start": "browser-sync start --server --files examples/**/*.*",
+    "dev": "webpack --watch --colors --config webpack.dev.config.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sapling-team/base-extend-backbone.git"
+  },
+  "keywords": [
+    "extend",
+    "backbone"
+  ],
+  "author": "icepy",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/sapling-team/base-extend-backbone/issues"
+  },
+  "homepage": "https://github.com/sapling-team/base-extend-backbone#readme",
+  "devDependencies": {
+    "babel-core": "^6.7.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-register": "^6.7.2",
+    "browser-sync": "^2.11.2",
+    "chai": "^3.5.0",
+    "eslint": "^2.5.1",
+    "eslint-loader": "^1.3.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "sinon": "^1.17.3",
+    "webpack": "^1.12.14"
+  }
 }
