--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,14 @@
 language:node_js
 node_js:
-    -"4.4.1"
+    -"4"
+env:
+  - CXX=g++-4.8
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
 before_install:
     - npm install -g mocha
     - npm install
