--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,10 @@
-language:node_js
+language: node_js
+sudo: false
 node_js:
-    -"4"
-env:
-  - CXX=g++-4.8
-addons:
-  apt:
-    sources:
-      - ubuntu-toolchain-r-test
-    packages:
-      - g++-4.8
+  - '4.1.1'
+cache:
+  directories:
+    - node_modules
 before_install:
     - npm install -g mocha
     - npm install
