--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language:node_js
 sudo:false
 node_js:
-  - '4.1.1'
+  - '4.3.2'
+  - '4.4.1'
 cache:
   directories:
     - node_modules
@@ -9,6 +10,6 @@ branches:
   only:
     - master
 before_install:
-    - npm install
-script: 
+    - npm install --verbose
+script:
   - npm run test
