--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language:node_js
 sudo:false
 node_js:
-  - '4.3.2'
-  - '4.4.1'
+ - '4.3.2'
+ - '4.4.1'
 cache:
   directories:
     - node_modules
@@ -10,6 +10,6 @@ branches:
   only:
     - master
 before_install:
-    - npm install --verbose
+    - npm install
 script:
-  - npm run test
+ - npm test
