--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "基于backbone的扩展",
   "main": "./src/index.js",
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register --colors -w ./configs/mocha/**/*.test.js",
+    "test": "mocha --compilers js:babel-core/register --colors ./configs/mocha/**/*.test.js",
     "start": "browser-sync start --server --files examples/**/*.*",
     "build": "webpack --colors --config webpack.config.js "
   },
