--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "基于backbone的扩展",
     "main": "./src/index.js",
     "scripts": {
-        "test": "node ./node_modules/.bin/istanbul cover --report html ./node_modules/mocha/bin/_mocha --compilers js:babel-core/register --colors ./configs/mocha/**/*.test.js",
+        "test": "node ./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha --compilers js:babel-core/register --colors ./configs/mocha/**/*.test.js",
         "start": "browser-sync start --server --files examples/**/*.*",
         "build": "WEBPACK=BUILD webpack --colors --config ./configs/webpack/webpack.config.js ",
         "dev": "WEBPACK=DEV webpack --colors --config ./configs/webpack/webpack.config.js",
