--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "基于backbone的扩展",
     "main": "./src/index.js",
     "scripts": {
-        "test": "node ./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha --compilers js:babel-core/register --colors ./configs/mocha/**/*.test.js",
+        "test": "node --harmony ./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha --colors ./configs/mocha/**/*.test.js",
         "start": "browser-sync start --server --files examples/**/*.*",
         "build": "WEBPACK=BUILD webpack --colors --config ./configs/webpack/webpack.config.js ",
         "dev": "WEBPACK=DEV webpack --colors --config ./configs/webpack/webpack.config.js",
@@ -28,7 +28,6 @@
         "babel-core": "^6.7.4",
         "babel-loader": "^6.2.4",
         "babel-preset-es2015": "^6.6.0",
-        "babel-register": "^6.7.2",
         "backbone": "^1.3.2",
         "browser-sync": "^2.11.2",
         "chai": "^3.5.0",
